Fix roll jump, update to circular gauges

--- a/styles.css
+++ b/styles.css
@@ -23,20 +23,16 @@ body {
 
 .gauge {
     width: 80vmin;
-    height: 40vmin;
-    background: #333;
-    border-radius: 10px;
-    border: 3px solid #666;
+    height: 80vmin;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: relative;
 }
 
-.indicator {
-    width: 50%;
-    height: 50%;
+.gauge-svg {
+    width: 100%;
+    height: 80%;
 }
 
 #pitch-gauge p, #roll-gauge p {
@@ -98,7 +94,7 @@ body {
     }
 
     .gauge {
-        width: 40vmin;
-        height: 60vmin;
+        width: 45vmin;
+        height: 80vmin;
     }
 }
